--- a/index.html
+++ b/index.html
@@ -6,38 +6,39 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Sidebar for Dynamic Navigation -->
   <div class="sidebar">
-    <h3>📖 درس‌ها</h3>
-    <ul id="sidebar-menu"></ul>
+    <h3>📌 لیست درس‌ها</h3>
+    <ul id="sidebar-links"></ul>
   </div>
 
+  <!-- Main Content Area -->
   <div class="markdown-body">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
+      // Fetch the README.md file
       fetch('README.md')
         .then(res => res.text())
         .then(md => {
           // Convert Markdown to HTML
           document.querySelector('.markdown-body').innerHTML = marked.parse(md);
 
-          // Auto-generate sidebar from headings
-          let sidebar = document.getElementById("sidebar-menu");
-          let headings = document.querySelectorAll(".markdown-body h2");
-
-          headings.forEach((heading, index) => {
-            let id = "lesson" + (index + 1);
-            heading.id = id; // Assign ID to each heading
-
-            let link = document.createElement("a");
-            link.href = "#" + id;
-            link.textContent = heading.textContent;
-
-            let listItem = document.createElement("li");
-            listItem.appendChild(link);
-            sidebar.appendChild(listItem);
+          // Extract lesson titles (### headings)
+          const sidebar = document.getElementById("sidebar-links");
+          document.querySelectorAll("h3").forEach((heading, index) => {
+            const title = heading.innerText.trim();
+            const id = "lesson-" + index;
+            heading.id = id; // Assign an ID to each lesson title
+            
+            // Create Sidebar Links
+            const li = document.createElement("li");
+            li.innerHTML = `<a href="#${id}">${title}</a>`;
+            sidebar.appendChild(li);
           });
         });
     </script>
   </div>
+
 </body>
 </html>
