--- a/index.html
+++ b/index.html
@@ -6,17 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Mobile Menu Toggle -->
-  <button class="menu-toggle" onclick="toggleSidebar()">☰ منو</button>
-
-  <!-- Sidebar for Dynamic Navigation -->
-  <div class="sidebar" id="sidebar">
+  <div class="sidebar">
     <h3>📌 لیست درس‌ها</h3>
     <ul id="sidebar-links"></ul>
   </div>
 
-  <!-- Main Content Area -->
   <div class="markdown-body">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
@@ -36,13 +30,7 @@
             sidebar.appendChild(li);
           });
         });
-
-      // Sidebar Toggle Function for Mobile
-      function toggleSidebar() {
-        document.getElementById("sidebar").classList.toggle("show");
-      }
     </script>
   </div>
-
 </body>
 </html>
