--- a/index.html
+++ b/index.html
@@ -2,53 +2,47 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dutch Daily Course</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="sidebar" class="sidebar">
-    <div class="sidebar-header">
-      <h3>📌 لیست درس‌ها</h3>
-      <button id="close-sidebar" class="sidebar-toggle">×</button>
-    </div>
+
+  <!-- Mobile Menu Toggle -->
+  <button class="menu-toggle" onclick="toggleSidebar()">☰ منو</button>
+
+  <!-- Sidebar for Dynamic Navigation -->
+  <div class="sidebar" id="sidebar">
+    <h3>📌 لیست درس‌ها</h3>
     <ul id="sidebar-links"></ul>
   </div>
 
-  <div class="content">
-    <button id="open-sidebar" class="sidebar-toggle">☰</button>
-    <div class="markdown-body">
-      <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-      <script>
-        fetch('README.md')
-          .then(res => res.text())
-          .then(md => {
-            document.querySelector('.markdown-body').innerHTML = marked.parse(md);
+  <!-- Main Content Area -->
+  <div class="markdown-body">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script>
+      fetch('README.md')
+        .then(res => res.text())
+        .then(md => {
+          document.querySelector('.markdown-body').innerHTML = marked.parse(md);
 
-            // Create sidebar links from all h3 elements
-            const sidebar = document.getElementById("sidebar-links");
-            document.querySelectorAll("h3").forEach((heading, index) => {
-              const title = heading.innerText.trim();
-              const id = "lesson-" + index;
-              heading.id = id;
-              const li = document.createElement("li");
-              li.innerHTML = `<a href="#${id}">${title}</a>`;
-              sidebar.appendChild(li);
-            });
+          // Create sidebar links from all h3 elements
+          const sidebar = document.getElementById("sidebar-links");
+          document.querySelectorAll("h3").forEach((heading, index) => {
+            const title = heading.innerText.trim();
+            const id = "lesson-" + index;
+            heading.id = id;
+            const li = document.createElement("li");
+            li.innerHTML = `<a href="#${id}">${title}</a>`;
+            sidebar.appendChild(li);
           });
-
-        // Toggle sidebar functionality
-        document.getElementById('close-sidebar').addEventListener('click', () => {
-          document.getElementById('sidebar').classList.remove('open');
-          document.body.classList.remove('sidebar-active');
         });
 
-        document.getElementById('open-sidebar').addEventListener('click', () => {
-          document.getElementById('sidebar').classList.add('open');
-          document.body.classList.add('sidebar-active');
-        });
-      </script>
-    </div>
+      // Sidebar Toggle Function for Mobile
+      function toggleSidebar() {
+        document.getElementById("sidebar").classList.toggle("show");
+      }
+    </script>
   </div>
+
 </body>
 </html>
